force-app/main/default/objects/skilljar__Vilt_Session_Event__c/skilljar__Vilt_Session_Event__c.object-meta.xml
<CustomObject>
    <label>Vilt Session Event</label>
    <nameField>
        <label>Vilt Session Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vilt Session Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>