force-app/main/default/objects/skilljar__Vilt_Session_Event__c/fields/skilljar__Cancelled__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancelled</label>
    <type>Checkbox</type>
</CustomField>