force-app/main/default/objects/skilljar__Vilt_Session_Event__c/fields/skilljar__Ends_At__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Ends_At__c</fullName>
    <label>Ends At</label>
    <type>DateTime</type>
</CustomField>