force-app/main/default/objects/skilljar__Vilt_Session_Event__c/fields/skilljar__Location__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Location__c</fullName>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>