force-app/main/default/objects/skilljar__Vilt_Session_Event__c/fields/skilljar__Timezone__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Timezone__c</fullName>
    <label>Timezone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>