force-app/main/default/objects/skilljar__Vilt_Session_Event__c/fields/skilljar__Vilt_Session__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Vilt_Session__c</fullName>
    <label>Vilt Session</label>
    <referenceTo>skilljar__Vilt_Session__c</referenceTo>
    <relationshipLabel>Vilt Session Events</relationshipLabel>
    <relationshipName>Vilt_Session_Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>